RESOLVED FIXED122736
WebKit Nightlies broken by r157374
https://bugs.webkit.org/show_bug.cgi?id=122736
Summary WebKit Nightlies broken by r157374
Vicki Pfau
Reported 2013-10-13 19:42:17 PDT
After http://trac.webkit.org/changeset/157374, the nightlies will no longer launch due to a missing symbol: Symbol not found: __ZN3WTF16callOnMainThreadERKNS_8FunctionIFvvEEE Referenced from: /System/Library/PrivateFrameworks/Safari.framework/Versions/A/Safari Expected in: /Applications/WebKit.app/Contents/Frameworks/10.8/JavaScriptCore.framework/Versions/A/JavaScriptCore in /System/Library/PrivateFrameworks/Safari.framework/Versions/A/Safari I'm currently running 10.8.5.
Attachments
Patch (2.07 KB, patch)
2013-10-14 06:04 PDT, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2013-10-14 06:04:49 PDT
Anders Carlsson
Comment 2 2013-10-14 06:06:53 PDT
Mark Rowe (bdash)
Comment 3 2013-10-14 10:14:32 PDT
*** Bug 122756 has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 4 2013-10-14 10:17:17 PDT
*** Bug 122753 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.