WebKit Nightlies broken by r157374 https://bugs.webkit.org/show_bug.cgi?id=122736

Reviewed by Andreas Kling.

Add back a callOnMainThread overload that Safari is using.

* wtf/MainThread.cpp:
(WTF::callOnMainThread):
* wtf/MainThread.h:

Canonical link: https://commits.webkit.org/140865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157396 268f45cc-cd09-0410-ab3c-d52691b4dbfc