Source/WTF/wtf/MainThread.h
@@ -47,6 +47,10 @@ WTF_EXPORT_PRIVATE void cancelCallOnMainThread(MainThreadFunction*, void* contex
 
 WTF_EXPORT_PRIVATE void callOnMainThread(std::function<void ()>);
 
+// FIXME: This symbol is used by Safari and should be removed once Safari is no longer using it.
+template<typename> class Function;
+WTF_EXPORT_PRIVATE void callOnMainThread(const Function<void ()>&);
+
 WTF_EXPORT_PRIVATE void setMainThreadCallbacksPaused(bool paused);
 
 WTF_EXPORT_PRIVATE bool isMainThread();
